# parsec_exe_unpacker

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.cargo/: config
src/: dos_exe.rs  lib.rs  main.rs  parsec_exe.rs  unpacker.rs
tests/: unpack_tests.rs
