[package]
name = "parsec_exe_unpacker"
version = "1.0.1"
edition = "2018"
description = "Unpacker for an obscure MS-DOS executable packer using x86 emulation"
authors = ["Malte Thiesen <malte@kamalook.de>"]

[dependencies]
byteorder = "1.4.3"
clap = "3.1.14"
common_failures = "0.1.1"
failure = "0.1.8"
unicorn = "0.9.1"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.2.0"
sha2 = "0.9.8"
digest = { version = "0.9.0", features = ["std"] }
