[package]
name = "parsec_exe_unpacker"
version = "1.0.1"
edition = "2018"
description = "Unpacker for an obscure MS-DOS executable packer using x86 emulation"
authors = ["Malte Thiesen <malte@kamalook.de>"]

[dependencies]
byteorder = "1.4.3"
clap = "4.0.10"
eyre = "0.6.8"
unicorn-engine = "2.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.3.0"
sha2 = "0.10.2"
digest = { version = "0.10.3", features = ["std"] }
